--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,23 @@ Kivy-Garden==0.1.5
 kivy_deps.angle==0.4.0
 kivy_deps.glew==0.3.1
 kivy_deps.sdl2==0.8.0
+linkify-it-py==2.0.3
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+mdit-py-plugins==0.5.0
+mdurl==0.1.2
+npyscreen==4.10.5
+platformdirs==4.4.0
 Pygments==2.19.2
 pypiwin32==223
 pywin32==311
 requests==2.32.5
+rich==14.1.0
 SQLAlchemy==2.0.43
+tabulate==0.9.0
+textual==6.2.1
 typing_extensions==4.15.0
+uc-micro-py==1.0.3
 urllib3==2.5.0
 Werkzeug==3.1.3
+windows-curses==2.4.1
