--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ docutils==0.22.2
 filetype==1.2.0
 Flask==3.1.2
 Flask-SQLAlchemy==3.1.1
+fpdf==1.7.2
 greenlet==3.2.4
 idna==3.10
 itsdangerous==2.2.0
@@ -22,10 +23,12 @@ MarkupSafe==3.0.3
 mdit-py-plugins==0.5.0
 mdurl==0.1.2
 npyscreen==4.10.5
+pillow==11.3.0
 platformdirs==4.4.0
 Pygments==2.19.2
 pypiwin32==223
 pywin32==311
+reportlab==4.4.4
 requests==2.32.5
 rich==14.1.0
 SQLAlchemy==2.0.43
